2002-06-20  Darin Adler  <darin@apple.com>

	* kwq/KWQKCharsets.mm: Removed unneeded parts.
	* kwq/KWQStyle.mm: Removed.
	* kwq/KWQToolTip.mm: Removed.
	* kwq/KWQVariant.mm: Simplified.
	* kwq/Makefile.am: Removed KWQStyle.mm and KWQToolTip.mm.

	* kwq/KWQRefPtr.h: Streamlined implementation that inlines
	a bit less and is more efficient for creating empty pointers.

	* kwq/KWQStyle.h: Removed unused stuff.

	* kwq/kdecore/kcharsets.h: Removed unneeded parts.
	* kwq/qt/qsortedlist.h: Removed unneeded parts.
	* kwq/qt/qtooltip.h: Removed unneeded parts.
	* kwq/qt/qvariant.h: Removed unneeded parts.

	* khtml/khtmlview.cpp: (KHTMLView::~KHTMLView):
	Remove unneeded APPLE_CHANGES -- no need to nil something out in
	a destructor.

=== Alexander-9 ===

2002-06-19  Richard Williamson (local)  <rjw@apple.com>

	* kwq/KWQScrollView.mm:
	(QScrollView::addChild):
	    Fixed regression from fix to 2956444.  Wrong view was being checked
	    for conformance to WebCoreFrameView.
	* kwq/KWQWidget.mm:
	(QWidget::internalSetGeometry):
	    Fixed regression from fix to 2956444.  Wrong view was being checked
	    for conformance to WebCoreFrameView.

2002-06-19  Richard Williamson (local)  <rjw@apple.com>

	* khtml/khtmlview.cpp: (KHTMLView::~KHTMLView): 
	    Tweak
	* khtml/rendering/render_image.cpp:
	(RenderImage::setPixmap):
	    Call stopAnimations when a image changes, i.e. may be changed
	    by JS.
	* kwq/KWQPixmap.mm:
	(QPixmap::stopAnimations):
	    Call image renderer's stopAnimation.
	* kwq/qt/qpixmap.h:
        Added stopAnimations.
        
2002-06-19  Darin Adler  <darin@apple.com>

	- fixed 2956444 -- mac os x feedback form missing textarea

	* kwq/WebCoreFrameView.h: Added.

	* kwq/KWQWidget.mm:
	(QWidget::setCursor): Checked for cursor-setting call based on the
	WebCoreFrameView protocol instead of using an informal protocol.
	Also walk up the view chain so the cursor actually gets set.