@@ -1,3 +1,9 @@
+2002-06-21  Darin Adler  <darin@apple.com>
+
+	* kwq/KWQKloader.mm: (KWQCheckCacheObjectStatus):
+	Handle case of nil object. Add comments. Remove questionable use
+	of floating point abs() to convert always positive int to uint.
+
 2002-06-20  Darin Adler  <darin@apple.com>
 
 	* kwq/KWQKCharsets.mm: Removed unneeded parts.
